--- a/mail/locales/en-US/chrome/messenger/FilterEditor.dtd
+++ b/mail/locales/en-US/chrome/messenger/FilterEditor.dtd
@@ -6,6 +6,9 @@
 <!ENTITY filterName.label "Filter name:">
 <!ENTITY filterName.accesskey "i">
 
+<!ENTITY junk.label "Junk">
+<!ENTITY notJunk.label "Not Junk">
+
 <!ENTITY lowestPriorityCmd.label "Lowest">
 <!ENTITY lowPriorityCmd.label "Low">
 <!ENTITY normalPriorityCmd.label "Normal">
@@ -17,6 +20,8 @@
 <!ENTITY contextIncomingMail.accesskey "G">
 <!ENTITY contextManual.label "Manually Run">
 <!ENTITY contextManual.accesskey "R">
+<!ENTITY contextBeforeCls.label "Filter before Junk Classification">
+<!ENTITY contextAfterCls.label "Filter after Junk Classification">
 <!ENTITY contextOutgoing.label "After Sending">
 <!ENTITY contextOutgoing.accesskey "S">
 <!ENTITY contextArchive.label "Archiving">
@@ -39,6 +44,7 @@
 <!ENTITY markMessageStarred.label "Add Star">
 <!ENTITY setPriority.label "Set Priority to">
 <!ENTITY addTag.label "Tag Message">
+<!ENTITY setJunkScore.label "Set Junk Status to">
 <!ENTITY deleteMessage.label "Delete Message">
 <!ENTITY deleteFromPOP.label "Delete From POP Server">
 <!ENTITY fetchFromPOP.label "Fetch From POP Server">
