--- a/mail/locales/en-US/chrome/messenger/msgAccountCentral.dtd
+++ b/mail/locales/en-US/chrome/messenger/msgAccountCentral.dtd
@@ -22,4 +22,5 @@
 <!ENTITY advFeaturesSectionHdr.label  "Advanced Features">
 <!ENTITY searchMsgsLink.label         "Search messages">
 <!ENTITY filtersLink.label            "Manage message filters">
+<!ENTITY junkSettings.label           "Junk mail settings">
 <!ENTITY offlineLink.label            "Offline settings">
