no bug - Bumping Thunderbird l10n changesets r=release a=l10n-bump DONTBUILD
af -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ar -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ast -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
be -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
bg -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
br -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ca -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
cak -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
cs -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
cy -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
da -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
de -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
dsb -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
el -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
en-CA -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
en-GB -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
es-AR -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
es-ES -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
es-MX -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
et -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
eu -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
fi -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
fr -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
fy-NL -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ga-IE -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
gd -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
gl -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
he -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
hr -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
hsb -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
hu -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
hy-AM -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
id -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
is -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
it -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ja -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ja-JP-mac -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ka -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
kab -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
kk -> 0c7d69b5abec653a91bac42c6d5899a6cd87148c
ko -> 0

--- a/mail/locales/l10n-changesets.json
+++ b/mail/locales/l10n-changesets.json
@@ -8,7 +8,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ar": {
         "pin": false,
@@ -19,7 +19,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ast": {
         "pin": false,
@@ -30,7 +30,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "be": {
         "pin": false,
@@ -41,7 +41,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "bg": {
         "pin": false,
@@ -52,7 +52,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "br": {
         "pin": false,
@@ -63,7 +63,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ca": {
         "pin": false,
@@ -74,7 +74,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "cak": {
         "pin": false,
@@ -85,7 +85,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "cs": {
         "pin": false,
@@ -96,7 +96,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "cy": {
         "pin": false,
@@ -107,7 +107,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "da": {
         "pin": false,
@@ -118,7 +118,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "de": {
         "pin": false,
@@ -129,7 +129,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "dsb": {
         "pin": false,
@@ -140,7 +140,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "el": {
         "pin": false,
@@ -151,7 +151,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "en-CA": {
         "pin": false,
@@ -162,7 +162,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "en-GB": {
         "pin": false,
@@ -173,7 +173,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "es-AR": {
         "pin": false,
@@ -184,7 +184,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "es-ES": {
         "pin": false,
@@ -195,7 +195,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "es-MX": {
         "pin": false,
@@ -206,7 +206,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "et": {
         "pin": false,
@@ -217,7 +217,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "eu": {
         "pin": false,
@@ -228,7 +228,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "fi": {
         "pin": false,
@@ -239,7 +239,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "fr": {
         "pin": false,
@@ -250,7 +250,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "fy-NL": {
         "pin": false,
@@ -261,7 +261,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ga-IE": {
         "pin": false,
@@ -272,7 +272,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "gd": {
         "pin": false,
@@ -283,7 +283,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "gl": {
         "pin": false,
@@ -294,7 +294,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "he": {
         "pin": false,
@@ -305,7 +305,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "hr": {
         "pin": false,
@@ -316,7 +316,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "hsb": {
         "pin": false,
@@ -327,7 +327,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "hu": {
         "pin": false,
@@ -338,7 +338,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "hy-AM": {
         "pin": false,
@@ -349,7 +349,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "id": {
         "pin": false,
@@ -360,7 +360,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "is": {
         "pin": false,
@@ -371,7 +371,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "it": {
         "pin": false,
@@ -382,7 +382,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ja": {
         "pin": false,
@@ -392,14 +392,14 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ja-JP-mac": {
         "pin": false,
         "platforms": [
             "macosx64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ka": {
         "pin": false,
@@ -410,7 +410,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "kab": {
         "pin": false,
@@ -421,7 +421,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "kk": {
         "pin": false,
@@ -432,7 +432,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ko": {
         "pin": false,
@@ -443,7 +443,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "lt": {
         "pin": false,
@@ -454,7 +454,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "lv": {
         "pin": false,
@@ -465,7 +465,18 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
+    },
+    "mk": {
+        "pin": false,
+        "platforms": [
+            "linux",
+            "linux64",
+            "macosx64",
+            "win32",
+            "win64"
+        ],
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ms": {
         "pin": false,
@@ -476,7 +487,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "nb-NO": {
         "pin": false,
@@ -487,7 +498,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "nl": {
         "pin": false,
@@ -498,7 +509,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "nn-NO": {
         "pin": false,
@@ -509,7 +520,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "pa-IN": {
         "pin": false,
@@ -520,7 +531,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "pl": {
         "pin": false,
@@ -531,7 +542,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "pt-BR": {
         "pin": false,
@@ -542,7 +553,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "pt-PT": {
         "pin": false,
@@ -553,7 +564,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "rm": {
         "pin": false,
@@ -564,7 +575,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ro": {
         "pin": false,
@@ -575,7 +586,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "ru": {
         "pin": false,
@@ -586,7 +597,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "sk": {
         "pin": false,
@@ -597,7 +608,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "sl": {
         "pin": false,
@@ -608,7 +619,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "sq": {
         "pin": false,
@@ -619,7 +630,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "sr": {
         "pin": false,
@@ -630,7 +641,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "sv-SE": {
         "pin": false,
@@ -641,7 +652,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "th": {
         "pin": false,
@@ -652,7 +663,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "tr": {
         "pin": false,
@@ -663,7 +674,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "uk": {
         "pin": false,
@@ -674,7 +685,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "uz": {
         "pin": false,
@@ -685,7 +696,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "vi": {
         "pin": false,
@@ -696,7 +707,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "zh-CN": {
         "pin": false,
@@ -707,7 +718,7 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     },
     "zh-TW": {
         "pin": false,
@@ -718,6 +729,6 @@
             "win32",
             "win64"
         ],
-        "revision": "a7b65918acc1bd61f20b405468b823488993c448"
+        "revision": "0c7d69b5abec653a91bac42c6d5899a6cd87148c"
     }
 }
