Bug 1990232 - Remove 32 Bit Linux Config from comm taskgraph r=dandarnell
Differential Revision: https://phabricator.services.mozilla.com/D265858

--- a/taskcluster/kinds/l10n/kind.yml
+++ b/taskcluster/kinds/l10n/kind.yml
@@ -63,7 +63,7 @@ tasks:
         tooltool:
             by-build-platform:
                 default: internal
-                linux.*: public
+                linux64.*: public
         index:
             type: l10n
             product: thunderbird
